Update radio button labels in post form

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     <form id="post-form">
         <textarea id="post-text" placeholder="つぶやき..."></textarea>
         <div id="emergency-categories" style="display:none;">
-            <label><input type="radio" name="category" value="安否" required>安否</label>
-            <label><input type="radio" name="category" value="被害" required>被害</label>
-            <label><input type="radio" name="category" value="支援要請" required>支援要請</label>
+            <label><input type="radio" name="category" value="安否">
+            <label><input type="radio" name="category" value="被害">
+            <label><input type="radio" name="category" value="支援要請">
         </div>
         <button type="submit">投稿（位置情報必須）</button>
     </form>
