--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@
     <form id="post-form">
         <textarea id="post-text" placeholder="つぶやき..."></textarea>
         <div id="emergency-categories" style="display:none;">
-            <label><input type="radio" name="category" value="安否">
-            <label><input type="radio" name="category" value="被害">
-            <label><input type="radio" name="category" value="支援要請">
-        </div>
+           <div id="emergency-categories" style="display:none;">
+    <label><input type="radio" name="category" value="安否"> 安否</label>
+    <label><input type="radio" name="category" value="被害"> 被害</label>
+    <label><input type="radio" name="category" value="支援要請"> 支援要請</label>
+</div>
         <button type="submit">投稿（位置情報必須）</button>
     </form>
     
