--- a/index.html
+++ b/index.html
@@ -35,11 +35,17 @@
     <form id="post-form">
     <textarea id="post-text" placeholder="つぶやき..."></textarea>
     
-    <div id="emergency-categories" style="display:none;">
-        <label><input type="radio" name="category" value="安否"></label>
-        <label><input type="radio" name="category" value="被害"></label>
-        <label><input type="radio" name="category" value="支援要請"></label>
-    </div>
+  <div id="emergency-categories" style="display:none; gap: 10px; margin: 10px 0;">
+    <label style="background:#fff; border:1px solid #f00; padding:5px; border-radius:5px; color:#f00;">
+        <input type="radio" name="category" value="安否"> 安否
+    </label>
+    <label style="background:#fff; border:1px solid #f00; padding:5px; border-radius:5px; color:#f00;">
+        <input type="radio" name="category" value="被害"> 被害
+    </label>
+    <label style="background:#fff; border:1px solid #f00; padding:5px; border-radius:5px; color:#f00;">
+        <input type="radio" name="category" value="支援要請"> 支援要請
+    </label>
+</div>
     
     <button type="submit">投稿（位置情報必須）</button>
 </form>
