--- a/index.html
+++ b/index.html
@@ -1,27 +1,61 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>常総コミュニティ防災プラットフォーム</title>
     <style>
-        /* 地図のサイズ設定 */
+        /* 地図の表示設定 */
         #map {
-            height: 600px; 
+            height: 600px;
             width: 100%;
-            border: 1px solid #ccc;
+            border: 2px solid #333; /* 地図の境界を見やすく */
+            margin-bottom: 20px;
         }
 
-        /* 非常時モードのラベルデザイン */
+        /* フォーム周りのデザイン */
+        body {
+            font-family: sans-serif;
+            padding: 20px;
+            max-width: 800px;
+            margin: 0 auto;
+        }
+
+        #mode-toggle {
+            padding: 10px 20px;
+            font-size: 16px;
+            cursor: pointer;
+            margin-bottom: 15px;
+        }
+
+        #post-text {
+            width: 100%;
+            height: 80px;
+            margin-bottom: 10px;
+            padding: 5px;
+            font-size: 16px;
+            box-sizing: border-box;
+        }
+
+        /* 非常時モードの選択肢デザイン */
+        #emergency-categories {
+            display: none; /* 初期状態は非表示 */
+            gap: 10px;
+            margin-bottom: 15px;
+            flex-wrap: wrap;
+        }
+
         #emergency-categories label {
-            display: inline-flex;
+            display: flex;
             align-items: center;
-            padding: 5px 10px;
-            margin-right: 15px; 
-            border: 1px solid #ff9999; 
-            border-radius: 5px;
+            padding: 8px 15px;
+            border: 2px solid #ff4444;
+            border-radius: 20px;
             background-color: #fff;
             cursor: pointer;
-            color: #cc0000;
+            color: #d32f2f;
+            font-weight: bold;
+            transition: background-color 0.2s;
         }
 
         #emergency-categories label:hover {
@@ -29,21 +63,44 @@
         }
 
         #emergency-categories input[type="radio"] {
-            margin-right: 5px;
+            margin-right: 8px;
+            transform: scale(1.2);
+        }
+
+        button[type="submit"] {
+            background-color: #4CAF50;
+            color: white;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            font-size: 16px;
+            cursor: pointer;
+        }
+
+        button[type="submit"]:hover {
+            background-color: #45a049;
         }
     </style>
 </head>
 <body>
-    <div id="map">地図表示エリア</div>
+
+    <div id="map"></div>
 
     <button id="mode-toggle">非常時モードに切り替え</button>
+
     <form id="post-form">
-        <textarea id="post-text" placeholder="つぶやき..."></textarea>
+        <textarea id="post-text" placeholder="状況をつぶやいてください..."></textarea>
         
-        <div id="emergency-categories" style="display:none; gap: 10px; margin: 10px 0;">
-            <label><input type="radio" name="category" value="安否"> 安否</label>
-            <label><input type="radio" name="category" value="被害"> 被害</label>
-            <label><input type="radio" name="category" value="支援要請"> 支援要請</label>
+        <div id="emergency-categories">
+            <label>
+                <input type="radio" name="category" value="安否"> 安否
+            </label>
+            <label>
+                <input type="radio" name="category" value="被害"> 被害
+            </label>
+            <label>
+                <input type="radio" name="category" value="支援要請"> 支援要請
+            </label>
         </div>
         
         <button type="submit">投稿（位置情報必須）</button>
@@ -62,10 +119,15 @@
             messagingSenderId: "659788884587",
             appId: "1:659788884587:web:39b9a1b840039c24875f2e"
         };
-        firebase.initializeApp(firebaseConfig);
+        // Firebaseの初期化
+        if (!firebase.apps.length) {
+            firebase.initializeApp(firebaseConfig);
+        }
     </script>
 
     <script src="app.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB7hvh-OUCTVM62geqN543IMtgEWl-eeTQ&callback=initMap"></script>
+
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB7hvh-OUCTVM62geqN543IMtgEWl-eeTQ&callback=initMap" async defer></script>
+
 </body>
 </html>
