Update emergency categories in the form

--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
         <textarea id="post-text" placeholder="状況をつぶやいてください..."></textarea>
         
         <div id="emergency-categories">
-            <label><input type="radio" name="category" value="安否"> 安否</label>
-            <label><input type="radio" name="category" value="被害"> 被害</label>
+            <label><input type="radio" name="category" value="被害無し"> 被害無し</label>
+            <label><input type="radio" name="category" value="被害あり"> 被害あり</label>
             <label><input type="radio" name="category" value="支援要請"> 支援要請</label>
         </div>
         
