--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
     <script src="app.js"></script>
 
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB7hvh-0_0vF9lW_vFv-vFv-vFv&callback=initMap"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB7hvh-OUCTVM62geqN543IMtgEWl-eeTQ=initMap"></script>
 
 </body>
 </html>
